--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
 
-        <title>My Portfolio</title>
+        <title>Haganta's Portfolio</title>
     </head>
 
     <body>
