fixed blob size, resume button, deleted skills bar

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <span class="section_subtitle">Introduction</span>
 
                 <div class="about_container container grid">
-                    <img src="assets/img/about.jpg" alt="" class="about_img">
+                    <img src="assets/img/about.JPG" alt="" class="about_img">
 
                     <div class="about_data">
                         <p class="about_desc">Web and mobile developer, with experience in developing mobile apps in
@@ -137,16 +137,16 @@
                     <div class="about_info">
                         <div>
                             <span class="about_info-title">1+</span>
-                            <span class="about_info-name">years <br> experience</span>
+                            <span class="about_info-name">year <br> experience</span>
                         </div>
                         <div>
-                            <span class="about_info-title">20+</span>
+                            <span class="about_info-title">2</span>
                             <span class="about_info-name">completed <br> projects</span>
                         </div>
-                        <div>
+                        <!-- <div>
                             <span class="about_info-title">5+</span>
                             <span class="about_info-name">companies <br> worked</span>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="about_button">
@@ -172,7 +172,7 @@
 
                                 <div>
                                     <h1 class="job_title">Mobile Developer</h1>
-                                    <span class="job_subtitle">More than 4 years</span>
+                                    <span class="job_subtitle">Learning level experience</span>
                                 </div>
 
                                 <i class="uil uil-angle-down skills_arrow"></i>
@@ -181,12 +181,13 @@
                             <div class="skills_list grid">
                                 <div class="skills_data">
                                     <div class="skills_title">
+                                        <i class="uil uil-react subskill_icon"></i>
                                         <h3 class="skills_name">React Native</h3>
-                                        <span class="skills_number">80%</span>
+                                        <!-- <span class="skills_number">80%</span> -->
                                     </div>
-                                    <div class="skills_bar">
+                                    <!-- <div class="skills_bar">
                                         <span class="skills_percentage skills_reactNative"></span>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -197,7 +198,7 @@
 
                                 <div>
                                     <h1 class="job_title">Frontend Developer</h1>
-                                    <span class="job_subtitle">More than 4 years</span>
+                                    <span class="job_subtitle">Learning level experience</span>
                                 </div>
 
                                 <i class="uil uil-angle-down skills_arrow"></i>
@@ -206,30 +207,33 @@
                             <div class="skills_list grid">
                                 <div class="skills_data">
                                     <div class="skills_title">
+                                        <i class="uil uil-html5 subskill_icon"></i>
                                         <h3 class="skills_name">HTML</h3>
-                                        <span class="skills_number">40%</span>
+                                        <!-- <span class="skills_number">40%</span> -->
                                     </div>
-                                    <div class="skills_bar">
+                                    <!-- <div class="skills_bar">
                                         <span class="skills_percentage skills_html"></span>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="skills_data">
                                     <div class="skills_title">
+                                        <i class="uil uil-css3-simple subskill_icon"></i>
                                         <h3 class="skills_name">CSS</h3>
-                                        <span class="skills_number">40%</span>
+                                        <!-- <span class="skills_number">40%</span> -->
                                     </div>
-                                    <div class="skills_bar">
+                                    <!-- <div class="skills_bar">
                                         <span class="skills_percentage skills_css"></span>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="skills_data">
                                     <div class="skills_title">
+                                        <i class="uil uil-java-script subskill_icon"></i>
                                         <h3 class="skills_name">JavaScript</h3>
-                                        <span class="skills_number">60%</span>
+                                        <!-- <span class="skills_number">60%</span> -->
                                     </div>
-                                    <div class="skills_bar">
+                                    <!-- <div class="skills_bar">
                                         <span class="skills_percentage skills_javascript"></span>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
