fixed skill bar, deleted scroll button

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
                         </div>
                     </div>
 
-                    <div class="home_scroll">
+                    <!-- <div class="home_scroll">
                         <a href="#about" class="home_scroll-button button--flex">
                             <i class="uil uil-mouse-alt home_scroll-mouse"></i>
                             <span class="home_scroll-name">Scroll down</span>
                             <i class="uil uil-arrow-down home_scroll-arrow"></i>
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </section>
 
@@ -185,9 +185,9 @@
                                         <h3 class="skills_name">React Native</h3>
                                         <!-- <span class="skills_number">80%</span> -->
                                     </div>
-                                    <!-- <div class="skills_bar">
+                                    <div class="skills_bar">
                                         <span class="skills_percentage skills_reactNative"></span>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -211,9 +211,9 @@
                                         <h3 class="skills_name">HTML</h3>
                                         <!-- <span class="skills_number">40%</span> -->
                                     </div>
-                                    <!-- <div class="skills_bar">
+                                    <div class="skills_bar">
                                         <span class="skills_percentage skills_html"></span>
-                                    </div> -->
+                                    </div>
                                 </div>
                                 <div class="skills_data">
                                     <div class="skills_title">
@@ -221,9 +221,9 @@
                                         <h3 class="skills_name">CSS</h3>
                                         <!-- <span class="skills_number">40%</span> -->
                                     </div>
-                                    <!-- <div class="skills_bar">
+                                    <div class="skills_bar">
                                         <span class="skills_percentage skills_css"></span>
-                                    </div> -->
+                                    </div>
                                 </div>
                                 <div class="skills_data">
                                     <div class="skills_title">
@@ -231,9 +231,9 @@
                                         <h3 class="skills_name">JavaScript</h3>
                                         <!-- <span class="skills_number">60%</span> -->
                                     </div>
-                                    <!-- <div class="skills_bar">
+                                    <div class="skills_bar">
                                         <span class="skills_percentage skills_javascript"></span>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
