--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <img src="assets/img/about.JPG" alt="" class="about_img">
 
                     <div class="about_data">
-                        <p class="about_desc">Web and mobile developer, with experience in developing mobile apps in
+                        <p class="about_desc">Frontend and mobile developer, with experience in developing mobile apps in
                             React Native.</p>
                     </div>
 
@@ -150,7 +150,7 @@
                     </div>
 
                     <div class="about_button">
-                        <a href="https://drive.google.com/file/d/1fJSpTx2rzC8XbXQRsPmh_0f4RDrEIQ4N/view?usp=sharing"
+                        <a href="https://drive.google.com/file/d/1T7tfNotObYA2WZrqgr2SIKXnwQ03tkfW/view?usp=sharing"
                             class="button button--flex" target="_blank">
                             Download Resume <i class="uil uil-download-alt button_icon"></i>
                         </a>
@@ -241,8 +241,8 @@
                 </div>
             </section>
 
-            <!--==================== QUALIFICATION ====================-->
-            <section class="qualification section">
+            <!--==================== QUALIFICATION (IN DEVELOPMENT) ====================-->
+            <section class="qualification section" style="display:none">
                 <h2 class="section_title">Qualification</h2>
                 <span class="section_subtitle">My personal journey</span>
 
@@ -300,7 +300,7 @@
                             <!--==================== QUALIFICATION 1 ====================-->
                             <div class="qualification_data">
                                 <h3 class="qualification_title">Internship</h3>
-                                <span class="qualification_subtitle">Telkom Witel Jambi</span>
+                                <span class="qualification_subtitle"></span>
                                 <div class="qualification_calendar">
                                     <i class="uil uil-calendar-alt"></i>
                                     2021
@@ -327,25 +327,50 @@
                             <img src="assets/img/reactnative.png" alt="" class="portfolio_img">
 
                             <div class="portfolio_data">
-                                <h3 class="portfolio_title">MedCheck</h3>
+                                <h3 class="portfolio_title">Easy MedCheck</h3>
                                 <p class="portfolio_description">Quick medical check mobile application. Developed as
                                     the final project in Telkom Digital Talent Incubator 2020.</p>
-                                <a href="#" class="button button--flex button--small portfolio_button">
-                                    See here <i class="uil uil-arrow-right button_icon"></i>
+                                <a href="https://github.com/hagantabrema/easy-medcheck" class="button button--flex button--small portfolio_button">
+                                    Source <i class="uil uil-arrow-right button_icon"></i>
                                 </a>
                             </div>
                         </div>
 
-                        <!--==================== PORTFOLIO 1 ====================-->
+                        <!--==================== PORTFOLIO 2 ====================-->
                         <div class="portfolio_content grid swiper-slide">
-                            <img src="assets/img/reactnative.png" alt="" class="portfolio_img">
+                            <img src="assets/img/lecons.PNG" alt="" class="portfolio_img">
 
                             <div class="portfolio_data">
-                                <h3 class="portfolio_title">MedCheck</h3>
-                                <p class="portfolio_description">Quick medical check mobile application. Developed as
-                                    the final project in Telkom Digital Talent Incubator 2020.</p>
-                                <a href="#" class="button button--flex button--small portfolio_button">
-                                    See here <i class="uil uil-arrow-right button_icon"></i>
+                                <h3 class="portfolio_title">Lecons Footwear Landing Page</h3>
+                                <p class="portfolio_description">A simple landing page website developed from my time as Orang Siber x Progate bootcamp.</p>
+                                <a href="https://hagantabrema.github.io/Lecons" class="button button--flex button--small portfolio_button">
+                                    Live site <i class="uil uil-arrow-right button_icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!--==================== PORTFOLIO 3 ====================-->
+                        <div class="portfolio_content grid swiper-slide">
+                            <img src="assets/img/single-price-grid-component.png" alt="" class="portfolio_img">
+
+                            <div class="portfolio_data">
+                                <h3 class="portfolio_title">Single Price Grid Component</h3>
+                                <p class="portfolio_description">A simple single page website from Frontend Mentor challenge.</p>
+                                <a href="https://hagantabrema.github.io/single-price-grid-component/" class="button button--flex button--small portfolio_button">
+                                    Live site <i class="uil uil-arrow-right button_icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!--==================== PORTFOLIO 4 ====================-->
+                        <div class="portfolio_content grid swiper-slide">
+                            <img src="assets/img/three-column-card.PNG" alt="" class="portfolio_img">
+
+                            <div class="portfolio_data">
+                                <h3 class="portfolio_title">Three Services Column Card</h3>
+                                <p class="portfolio_description">A simple single page website from Frontend Mentor challenge.</p>
+                                <a href="https://hagantabrema.github.io/3-column-card/" class="button button--flex button--small portfolio_button">
+                                    Live site <i class="uil uil-arrow-right button_icon"></i>
                                 </a>
                             </div>
                         </div>
