Updated portfolio data

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
                             <div class="portfolio_data">
                                 <h3 class="portfolio_title">Lecons Footwear Landing Page</h3>
-                                <p class="portfolio_description">A simple landing page website developed from my time as Orang Siber x Progate bootcamp.</p>
+                                <p class="portfolio_description">A simple landing page website developed from my time as Orang Siber x Progate bootcamp participant.</p>
                                 <a href="https://hagantabrema.github.io/Lecons" class="button button--flex button--small portfolio_button">
                                     Live site <i class="uil uil-arrow-right button_icon"></i>
                                 </a>
