updated description and CV link

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
                         <div class="home_bio">
                             <h1 class="home_title">Hello, I am Haganta</h1>
-                            <h3 class="home_job">Information System Final Year Student</h3>
-                            <p class="home_desc">A student with interest in web and mobile development.</p>
+                            <h3 class="home_job">Information System Fresh Graduate</h3>
+                            <p class="home_desc">A passionate learner with interest in web and mobile development.</p>
                             <a href="#contact" class="button button--flex">
                                 Contact Me <i class="uil uil-message button_icon"></i>
                             </a>
@@ -134,7 +134,7 @@
                             React Native.</p>
                     </div>
 
-                    <div class="about_info">
+                    <!-- <div class="about_info">
                         <div>
                             <span class="about_info-title">1+</span>
                             <span class="about_info-name">year <br> experience</span>
@@ -143,14 +143,14 @@
                             <span class="about_info-title">2</span>
                             <span class="about_info-name">completed <br> projects</span>
                         </div>
-                        <!-- <div>
+                        <div>
                             <span class="about_info-title">5+</span>
                             <span class="about_info-name">companies <br> worked</span>
-                        </div> -->
-                    </div>
+                        </div>
+                    </div> -->
 
                     <div class="about_button">
-                        <a href="https://drive.google.com/file/d/1T7tfNotObYA2WZrqgr2SIKXnwQ03tkfW/view?usp=sharing"
+                        <a href="https://drive.google.com/file/d/1oxwASiYHqVYDF9ja443SNzEDRVWwaJZH/view?usp=sharing"
                             class="button button--flex" target="_blank">
                             Download Resume <i class="uil uil-download-alt button_icon"></i>
                         </a>
